[package]
name = "alptk-config"
version = "0.1.0"
edition = "2021"

[dependencies]
json5 = { version = "0.4.1", optional = true }
ron = { version = "0.8.1", optional = true }
serde = "1.0.203"
serde_ini = { version = "0.2.0", optional = true }
serde_json = { version = "1.0.117", optional = true }

# TODO: this project is deprecated; find another toml library which is still maintained AND has serde support
serde_yaml = { version = "0.9.34", optional = true }

toml = { version = "0.8.14", optional = true }

[features]
toml = ["dep:toml"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]
ini = ["dep:serde_ini"]
ron = ["dep:ron"]
json5 = ["dep:json5"]
serde_ini = ["dep:serde_ini"]
